--- a/public/assets/vendor.css
+++ b/public/assets/vendor.css
@@ -98,3 +98,553 @@ body {
     width: 100%;
   }
 }
+
+:root {
+  --ecn-container-position: 10px;
+  --ecn-container-width: 80%;
+  --ecn-container-max-with: 400px;
+
+  --ecn-icon-width: 30px;
+  --ecn-icon-position: 10px;
+  --ecn-icon-color: rgba(255, 255, 255, 0.74);
+  --ecn-icon-lighten-background: rgba(255, 255, 255, 0.2);
+  --ecn-countdown-lighten-background: rgba(255, 255, 255, 0.4);
+  --ecn-notification-max-height: 800px;
+  --ecn-notification-border-radius: 3px;
+
+  /* Colours */
+  --ecn-green: #64ce83;
+  --ecn-blue: #3ea2ff;
+  --ecn-orange: #ff7f48;
+  --ecn-red: #e74c3c;
+
+  /* Spacing */
+  --ecn-spacing-1: .5rem;
+  --ecn-spacing-2: 1rem;
+}
+
+/* Base */
+
+.ember-cli-notifications-notification__container {
+  position: fixed;
+  margin: 0 auto;
+  width: 80%;
+  width: var(--ecn-container-width);
+  max-width: 400px;
+  max-width: var(--ecn-container-max-with);
+}
+
+/* Position */
+
+.ember-cli-notifications-notification__container--top {
+  top: 10px;
+  top: var(--ecn-container-position);
+  right: 0;
+  left: 0;
+}
+
+.ember-cli-notifications-notification__container--top-left {
+  top: 10px;
+  top: var(--ecn-container-position);
+  right: auto;
+  left: 10px;
+  left: var(--ecn-container-position);
+}
+
+.ember-cli-notifications-notification__container--top-right {
+  top: 10px;
+  top: var(--ecn-container-position);
+  right: 10px;
+  right: var(--ecn-container-position);
+  left: auto;
+}
+
+.ember-cli-notifications-notification__container--bottom {
+  right: 0;
+  bottom: 10px;
+  bottom: var(--ecn-container-position);
+  left: 0;
+}
+
+.ember-cli-notifications-notification__container--bottom-left {
+  right: auto;
+  bottom: 10px;
+  bottom: var(--ecn-container-position);
+  left: 10px;
+  left: var(--ecn-container-position);
+}
+
+.ember-cli-notifications-notification__container--bottom-right {
+  right: 10px;
+  right: var(--ecn-container-position);
+  bottom: 10px;
+  bottom: var(--ecn-container-position);
+  left: auto;
+}
+
+/* Values */
+.ember-cli-notifications-notification__container .c-notification {
+  display: flex;
+  align-items: stretch;
+  position: relative;
+  overflow: hidden;
+  border-radius: var(--ecn-notification-border-radius);
+  border-bottom: 1rem;
+  color: white;
+  max-height: var(--ecn-notification-max-height);
+  -webkit-animation: notification-hide 250ms cubic-bezier(.33859, -.42, 1, -.22), notification-shrink 250ms 250ms cubic-bezier(.5, 0, 0, 1);
+          animation: notification-hide 250ms cubic-bezier(.33859, -.42, 1, -.22), notification-shrink 250ms 250ms cubic-bezier(.5, 0, 0, 1);
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  margin-bottom: var(--ecn-spacing-2);
+}
+.ember-cli-notifications-notification__container .c-notification--clickable {
+  cursor: pointer;
+}
+.ember-cli-notifications-notification__container .c-notification--in {
+  -webkit-animation: notification-show 180ms cubic-bezier(.175, .885, .32, 1.27499);
+          animation: notification-show 180ms cubic-bezier(.175, .885, .32, 1.27499);
+}
+.ember-cli-notifications-notification__container .c-notification__content {
+  display: flex;
+  flex: 1 1 auto;
+  min-width: 0;
+  min-height: 0;
+  justify-content: space-between;
+  padding: var(--ecn-spacing-1) var(--ecn-spacing-2);
+  word-break: break-word;
+}
+.ember-cli-notifications-notification__container .c-notification__content a {
+  color: #fff;
+  text-decoration: underline;
+}
+.ember-cli-notifications-notification__container .c-notification__icon {
+  padding: var(--ecn-spacing-1) 0;
+  text-align: center;
+  flex: none;
+  background-color: var(--ecn-icon-lighten-background);
+  width: var(--ecn-icon-width);
+  color: var(--ecn-icon-color);
+}
+.ember-cli-notifications-notification__container .c-notification__svg {
+  width: 16px;
+  height: 16px;
+  vertical-align: text-top;
+}
+.ember-cli-notifications-notification__container .c-notification__close {
+  margin-left: var(--ecn-spacing-2);
+  align-self: flex-start;
+  opacity: .74;
+  cursor: pointer;
+}
+.ember-cli-notifications-notification__container .c-notification__close:hover,
+.ember-cli-notifications-notification__container .c-notification__close:focus {
+  opacity: 1;
+}
+.ember-cli-notifications-notification__container .c-notification__countdown {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: var(--ecn-countdown-lighten-background);
+  width: 0;
+  height: 4px;
+  -webkit-animation: notification-countdown linear 1;
+          animation: notification-countdown linear 1;
+}
+/* Theme */
+.ember-cli-notifications-notification__container .c-notification--info {
+  background-color: var(--ecn-blue);
+}
+.ember-cli-notifications-notification__container .c-notification--success {
+  background-color: var(--ecn-green);
+}
+.ember-cli-notifications-notification__container .c-notification--warning {
+  background-color: var(--ecn-orange);
+}
+.ember-cli-notifications-notification__container .c-notification--error {
+  background-color: var(--ecn-red);
+}
+/* Keyframes */
+@-webkit-keyframes notification-show {
+  0% {
+    opacity: 0;
+    transform: perspective(450px) translate(0, -30px) rotateX(90deg);
+  }
+
+  100% {
+    opacity: 1;
+    transform: perspective(450px) translate(0, 0) rotateX(0deg);
+  }
+}
+@keyframes notification-show {
+  0% {
+    opacity: 0;
+    transform: perspective(450px) translate(0, -30px) rotateX(90deg);
+  }
+
+  100% {
+    opacity: 1;
+    transform: perspective(450px) translate(0, 0) rotateX(0deg);
+  }
+}
+@-webkit-keyframes notification-shrink {
+  0% {
+    opacity: 0;
+    max-height: var(--ecn-notification-max-height);
+    transform: scale(.8);
+  }
+
+  100% {
+    opacity: 0;
+    max-height: 0;
+    transform: scale(.8);
+  }
+}
+@keyframes notification-shrink {
+  0% {
+    opacity: 0;
+    max-height: var(--ecn-notification-max-height);
+    transform: scale(.8);
+  }
+
+  100% {
+    opacity: 0;
+    max-height: 0;
+    transform: scale(.8);
+  }
+}
+@-webkit-keyframes notification-hide {
+  0% {
+    opacity: 1;
+    transform: scale(1);
+  }
+
+  100% {
+    opacity: 0;
+    transform: scale(.8);
+  }
+}
+@keyframes notification-hide {
+  0% {
+    opacity: 1;
+    transform: scale(1);
+  }
+
+  100% {
+    opacity: 0;
+    transform: scale(.8);
+  }
+}
+@-webkit-keyframes notification-countdown {
+  0% {
+    width: 100%;
+  }
+
+  100% {
+    width: 0%;
+  }
+}
+@keyframes notification-countdown {
+  0% {
+    width: 100%;
+  }
+
+  100% {
+    width: 0%;
+  }
+}
+
+:root {
+  --ecn-container-position: 10px;
+  --ecn-container-width: 80%;
+  --ecn-container-max-with: 400px;
+
+  --ecn-icon-width: 30px;
+  --ecn-icon-position: 10px;
+  --ecn-icon-color: rgba(255, 255, 255, 0.74);
+  --ecn-icon-lighten-background: rgba(255, 255, 255, 0.2);
+  --ecn-countdown-lighten-background: rgba(255, 255, 255, 0.4);
+  --ecn-notification-max-height: 800px;
+  --ecn-notification-border-radius: 3px;
+
+  /* Colours */
+  --ecn-green: #64ce83;
+  --ecn-blue: #3ea2ff;
+  --ecn-orange: #ff7f48;
+  --ecn-red: #e74c3c;
+
+  /* Spacing */
+  --ecn-spacing-1: .5rem;
+  --ecn-spacing-2: 1rem;
+}
+
+/* Base */
+
+.ember-cli-notifications-notification__container {
+  position: fixed;
+  margin: 0 auto;
+  width: 80%;
+  width: var(--ecn-container-width);
+  max-width: 400px;
+  max-width: var(--ecn-container-max-with);
+}
+
+/* Position */
+
+.ember-cli-notifications-notification__container--top {
+  top: 10px;
+  top: var(--ecn-container-position);
+  right: 0;
+  left: 0;
+}
+
+.ember-cli-notifications-notification__container--top-left {
+  top: 10px;
+  top: var(--ecn-container-position);
+  right: auto;
+  left: 10px;
+  left: var(--ecn-container-position);
+}
+
+.ember-cli-notifications-notification__container--top-right {
+  top: 10px;
+  top: var(--ecn-container-position);
+  right: 10px;
+  right: var(--ecn-container-position);
+  left: auto;
+}
+
+.ember-cli-notifications-notification__container--bottom {
+  right: 0;
+  bottom: 10px;
+  bottom: var(--ecn-container-position);
+  left: 0;
+}
+
+.ember-cli-notifications-notification__container--bottom-left {
+  right: auto;
+  bottom: 10px;
+  bottom: var(--ecn-container-position);
+  left: 10px;
+  left: var(--ecn-container-position);
+}
+
+.ember-cli-notifications-notification__container--bottom-right {
+  right: 10px;
+  right: var(--ecn-container-position);
+  bottom: 10px;
+  bottom: var(--ecn-container-position);
+  left: auto;
+}
+
+/* Values */
+
+.ember-cli-notifications-notification__container .c-notification {
+  display: flex;
+  align-items: stretch;
+  position: relative;
+  overflow: hidden;
+  border-radius: 3px;
+  border-radius: var(--ecn-notification-border-radius);
+  border-bottom: 1rem;
+  color: white;
+  max-height: 800px;
+  max-height: var(--ecn-notification-max-height);
+  -webkit-animation: notification-hide 250ms cubic-bezier(.33859, -.42, 1, -.22), notification-shrink 250ms 250ms cubic-bezier(.5, 0, 0, 1);
+          animation: notification-hide 250ms cubic-bezier(.33859, -.42, 1, -.22), notification-shrink 250ms 250ms cubic-bezier(.5, 0, 0, 1);
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  margin-bottom: 1rem;
+  margin-bottom: var(--ecn-spacing-2);
+}
+
+.ember-cli-notifications-notification__container .c-notification--clickable {
+  cursor: pointer;
+}
+
+.ember-cli-notifications-notification__container .c-notification--in {
+  -webkit-animation: notification-show 180ms cubic-bezier(.175, .885, .32, 1.27499);
+          animation: notification-show 180ms cubic-bezier(.175, .885, .32, 1.27499);
+}
+
+.ember-cli-notifications-notification__container .c-notification__content {
+  display: flex;
+  flex: 1 1 auto;
+  min-width: 0;
+  min-height: 0;
+  justify-content: space-between;
+  padding: .5rem 1rem;
+  padding: var(--ecn-spacing-1) var(--ecn-spacing-2);
+  word-break: break-word;
+}
+
+.ember-cli-notifications-notification__container .c-notification__content a {
+  color: #fff;
+  text-decoration: underline;
+}
+
+.ember-cli-notifications-notification__container .c-notification__icon {
+  padding: .5rem 0;
+  padding: var(--ecn-spacing-1) 0;
+  text-align: center;
+  flex: none;
+  background-color: rgba(255, 255, 255, 0.2);
+  background-color: var(--ecn-icon-lighten-background);
+  width: 30px;
+  width: var(--ecn-icon-width);
+  color: rgba(255, 255, 255, 0.74);
+  color: var(--ecn-icon-color);
+}
+
+.ember-cli-notifications-notification__container .c-notification__svg {
+  width: 16px;
+  height: 16px;
+  vertical-align: text-top;
+}
+
+.ember-cli-notifications-notification__container .c-notification__close {
+  margin-left: 1rem;
+  margin-left: var(--ecn-spacing-2);
+  align-self: flex-start;
+  opacity: .74;
+  cursor: pointer;
+}
+
+.ember-cli-notifications-notification__container .c-notification__close:hover,
+.ember-cli-notifications-notification__container .c-notification__close:focus {
+  opacity: 1;
+}
+
+.ember-cli-notifications-notification__container .c-notification__countdown {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.4);
+  background-color: var(--ecn-countdown-lighten-background);
+  width: 0;
+  height: 4px;
+  -webkit-animation: notification-countdown linear 1;
+          animation: notification-countdown linear 1;
+}
+
+/* Theme */
+
+.ember-cli-notifications-notification__container .c-notification--info {
+  background-color: #3ea2ff;
+  background-color: var(--ecn-blue);
+}
+
+.ember-cli-notifications-notification__container .c-notification--success {
+  background-color: #64ce83;
+  background-color: var(--ecn-green);
+}
+
+.ember-cli-notifications-notification__container .c-notification--warning {
+  background-color: #ff7f48;
+  background-color: var(--ecn-orange);
+}
+
+.ember-cli-notifications-notification__container .c-notification--error {
+  background-color: #e74c3c;
+  background-color: var(--ecn-red);
+}
+
+/* Keyframes */
+
+@-webkit-keyframes notification-show {
+  0% {
+    opacity: 0;
+    transform: perspective(450px) translate(0, -30px) rotateX(90deg);
+  }
+
+  100% {
+    opacity: 1;
+    transform: perspective(450px) translate(0, 0) rotateX(0deg);
+  }
+}
+
+@keyframes notification-show {
+  0% {
+    opacity: 0;
+    transform: perspective(450px) translate(0, -30px) rotateX(90deg);
+  }
+
+  100% {
+    opacity: 1;
+    transform: perspective(450px) translate(0, 0) rotateX(0deg);
+  }
+}
+
+@-webkit-keyframes notification-shrink {
+  0% {
+    opacity: 0;
+    max-height: 800px;
+    max-height: var(--ecn-notification-max-height);
+    transform: scale(.8);
+  }
+
+  100% {
+    opacity: 0;
+    max-height: 0;
+    transform: scale(.8);
+  }
+}
+
+@keyframes notification-shrink {
+  0% {
+    opacity: 0;
+    max-height: 800px;
+    max-height: var(--ecn-notification-max-height);
+    transform: scale(.8);
+  }
+
+  100% {
+    opacity: 0;
+    max-height: 0;
+    transform: scale(.8);
+  }
+}
+
+@-webkit-keyframes notification-hide {
+  0% {
+    opacity: 1;
+    transform: scale(1);
+  }
+
+  100% {
+    opacity: 0;
+    transform: scale(.8);
+  }
+}
+
+@keyframes notification-hide {
+  0% {
+    opacity: 1;
+    transform: scale(1);
+  }
+
+  100% {
+    opacity: 0;
+    transform: scale(.8);
+  }
+}
+
+@-webkit-keyframes notification-countdown {
+  0% {
+    width: 100%;
+  }
+
+  100% {
+    width: 0%;
+  }
+}
+
+@keyframes notification-countdown {
+  0% {
+    width: 100%;
+  }
+
+  100% {
+    width: 0%;
+  }
+}
